# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  07 Nov 2005; Roy Marples <uberlord@gentoo.org>:

    documented pppd module settings, #53954

    rc-status now warns about broken symbolic links in /etc/runlevels and
    trace_dependencies got a bit of a revamp, attempts to fix #104394

  04 Nov 2005; Roy Marples <uberlord@gentoo.org>:

    udhcpc now checks the dhcp lease file for a valid IP address.

    We prefer iproute2 when stopping an interface by default.

  03 Nov 2005; Roy Marples <uberlord@gentoo.org>:

    iwconfig now detects an unencrypted AP and doesn't apply any configured
    WEP settings.

    baselayout now caters for systems without /bin/hostname (from net-tools)
    and uses sysctl instead.

  02 Nov 2005; Mike Frysinger <vapier@gentoo.org>:

    Grab updates from IANA for /etc/services including OpenVPN #111194.

  31 Oct 2005; Roy Marples <uberlord@gentoo.org>:

    Replace the bubble-esq sort routine with a tsort based one for
    loading modules. This means that we are much faster than before :)

    Fix ifconfig with multiple IP addresses, #110956

  28 Oct 2005; Mike Frysinger <vapier@gentoo.org>:

    Fix typo in rc-status error message #110685 by Eduardo Tongson.

  27 Oct 2005; Roy Marples <uberlord@gentoo.org>:

    New net scripts depend calls - functions, variables and provide.
    This saves having to create 3 seperate functions in each module which means
    a saving of around 600-800 bytes per module.

    Split apipa out of arping module due to user demand for seperate
    functionality.

    arping module now works correctly.

    runscript sets RC_KILL_CHILDREN="no" when restarting a service, otherwise
    things like your ssh session get killed.

    adsl module supports new rp-pppoe-3.6 ebuild, #102820

    Config profile is now changed correctly when doing "rc foo" and you're in
    the default runlevel, #101105
